show tooltips on hp/energy/exp + apply level scaling.

--- a/prototype/website/src/style/style.css
+++ b/prototype/website/src/style/style.css
@@ -31,8 +31,8 @@ iron-icon:hover {
 }
 
 paper-tooltip {
+    z-index: 999;
     --paper-tooltip-background: black;
-
     --paper-tooltip-animation: {
         animation-timing-function: ease;
     }
