some more work on spellcasting feedback.

--- a/prototype/website/src/style/style.css
+++ b/prototype/website/src/style/style.css
@@ -32,6 +32,7 @@ iron-icon:hover {
 
 paper-tooltip {
     z-index: 999;
+    --paper-tooltip-opacity: 1.0;
     --paper-tooltip-background: black;
     --paper-tooltip-animation: {
         animation-timing-function: ease;
