--- a/prototype/website/src/style/style.css
+++ b/prototype/website/src/style/style.css
@@ -11,6 +11,12 @@ body, html {
     margin: 0;
 }
 
+body {
+    background-image: url("/resources/gui/background/active.png");
+    background-repeat: repeat-x;
+    background-attachment: fixed;
+}
+
 paper-input {
     margin-left: 16px;
     margin-right: 16px;
@@ -26,8 +32,14 @@ iron-icon {
     cursor: pointer;
 }
 
+paper-material {
+    background-color: #161616;
+    opacity: 0.92;
+    border-radius: 2px;
+}
+
 iron-icon:hover {
-    color: purple;
+    color: var(--accent-color);
 }
 
 paper-tooltip {
@@ -52,11 +64,14 @@ paper-toolbar {
 }
 
 .interface-box {
-    border: 1px solid rgba(74, 20, 140, 0.5);
+    border: 1px solid var(--game-theme-opaque);
+    border-radius: 2px;
+    background-color: #161616;
+    opacity: 0.97;
 }
 
 hr {
-    border-color: rgba(72, 20, 140, 1.0);
+    border-color: var(--game-theme);
 }
 
 .noselect {
