--- a/prototype/website/src/style/theme.css
+++ b/prototype/website/src/style/theme.css
@@ -74,17 +74,19 @@ a:hover {
 }
 
 :root {
+    --game-theme: #687f7d;
+    --game-theme-opaque: #687f7d80;
     --default-primary-color: #3b8183;
     --dark-primary-color: #424b4b;
     --light-primary-color: #c5cae9;
     --text-primary-color: #ffffff;
-    --accent-color: #ff4081;
+    --accent-color: #00b0ff;/*#ff4081;*/
     --primary-background-color: #ffffff;
     --primary-text-color: #ffffff;
     --secondary-text-color: #ffffff;
     --disabled-text-color: black;
     --divider-color: #e0e0e0;
-    --paper-checkbox-checked-color: #4a148c;
+    --paper-checkbox-checked-color: var(--game-theme);
     --paper-checkbox-checked-ink-color: #3b8183;
     --paper-checkbox-unchecked-color: #424242;
     --paper-checkbox-unchecked-ink-color: #424b4b;
@@ -100,23 +102,23 @@ a:hover {
     --paper-menu-background-color: #2c2f2f;
     --paper-menu-color: #ffffff;
     --paper-menu-disabled-color: #9e9e9e;
-    --paper-progress-active-color: #4a148c;
+    --paper-progress-active-color: var(--game-theme);
     --paper-progress-secondary-color: #4db6ac;
     --paper-radio-button-checked-color: white;
     --paper-radio-button-checked-ink-color: #f5fbfb;
     --paper-radio-button-unchecked-color: #ffffff;
     --paper-radio-button-unchecked-ink-color: #ffffff;
     --paper-radio-button-label-color: #ffffff;
-    --paper-slider-knob-color: #4a148c;
-    --paper-slider-active-color: #4a148c;
-    --paper-slider-pin-color: #4a148c;
-    --paper-spinner-color: #4a148c;
-    --paper-spinner-layer-1-color: #4a148c;
-    --paper-spinner-layer-2-color: #4a148c;
-    --paper-spinner-layer-3-color: #4a148c;
-    --paper-spinner-layer-4-color: #4a148c;
-    --paper-tabs-selection-bar-color: #4a148c;
-    --paper-tab-ink: #4a148c;
+    --paper-slider-knob-color: var(--game-theme);
+    --paper-slider-active-color: var(--game-theme);
+    --paper-slider-pin-color: var(--game-theme);
+    --paper-spinner-color: var(--game-theme);
+    --paper-spinner-layer-1-color: var(--game-theme);
+    --paper-spinner-layer-2-color: var(--game-theme);
+    --paper-spinner-layer-3-color: var(--game-theme);
+    --paper-spinner-layer-4-color: var(--game-theme);
+    --paper-tabs-selection-bar-color: var(--game-theme);
+    --paper-tab-ink: var(--game-theme);
     --paper-toggle-button-checked-bar-color: #424242;
     --paper-toggle-button-checked-button-color: white;
     --paper-toggle-button-checked-ink-color: white;
@@ -133,11 +135,11 @@ paper-toolbar a, paper-toolbar a:hover, paper-toolbar a:active, paper-toolbar a:
 }
 
 paper-button.primary, paper-button.btn-primary, paper-button[primary] {
-    color: #4a148c;
+    color: var(--game-theme);
 }
 
 paper-button.primary[raised], paper-button.btn-primary[raised], paper-button[primary][raised] {
-    background-color: #4a148c;
+    background-color: var(--game-theme);
     color: #fff;
 }
 
@@ -200,7 +202,7 @@ paper-button[disabled] {
 }
 
 paper-icon-button.primary, paper-icon-button.btn-primary, paper-icon-button[primary] {
-    color: #4a148c;
+    color: var(--game-theme);
 }
 
 paper-icon-button.primary:hover, paper-icon-button.btn-primary:hover, paper-icon-button[primary]:hover {
@@ -281,13 +283,13 @@ paper-fab {
 }
 
 paper-fab {
-    background-color: #4a148c;
+    background-color: var(--game-theme);
     color: #fff;
     --paper-fab-keyboard-focus-background: #873ce3;
 }
 
 paper-fab.primary, paper-fab.btn-primary, paper-fab[primary] {
-    background-color: #4a148c;
+    background-color: var(--game-theme);
     color: #fff;
     --paper-fab-keyboard-focus-background: #873ce3;
 }
