--- a/prototype/website/src/style/style.css
+++ b/prototype/website/src/style/style.css
@@ -114,11 +114,11 @@ paper-toast {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: -3px;
     position: absolute;
     display: none;
     pointer-events: all;
-    z-index: 500;
+    z-index: 900;
 }
 
 .dialog-overlay {
