minor css fixes + only send vector stop event if actually moving on death.

--- a/prototype/website/src/style/theme.css
+++ b/prototype/website/src/style/theme.css
@@ -6,7 +6,7 @@
  * Based on Polymer: http://www.polymer-project.org/
  * Compatible with Polymer 1.0
  */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans|Oswald:700");
+/*@import url("https://fonts.googleapis.com/css?family=Open+Sans|Oswald:700");*/
 
 html {
     -ms-text-size-adjust: 100%;
