--- a/prototype/website/src/style/style.css
+++ b/prototype/website/src/style/style.css
@@ -109,10 +109,19 @@ hr {
     margin: auto;
 }
 
-[hidden] { display: none }
+[hidden] {
+    display: none
+}
 
 paper-toast {
     text-align: center;
+}
+
+#dialog-close {
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    z-index: 1001;
 }
 
 .dialog-container {
@@ -143,6 +152,13 @@ paper-toast {
     to {
         opacity: 0.64;
     }
+}
+
+.dialog-entity {
+    margin-top: 8px;
+    padding-left: 16px;
+    display: block;
+    color: var(--paper-grey-300);
 }
 
 .dialog-center {
